Put in a shader for stars
It's just an unlit shader that returns the color given, and I checked sebastian's code and project, and he used the same kind of shader, and when I downloaded the project, it looked the same, but in the video it looks really nice because of a bloom effect that isn't actually in his project. Movie magic perhaps?

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Assets\Scripts\MovementPrediction.cs" />
     <Compile Include="Assets\Scripts\PlayerGravity.cs" />
     <Compile Include="Assets\Scripts\Universe.cs" />
+    <None Include="Assets\Scripts\Shaders\Star.shader" />
     <Reference Include="UnityEngine">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.3f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
@@ -627,20 +628,20 @@
     <Reference Include="Unity.CollabProxy.Editor">
       <HintPath>C:/Users/jonah/Documents/Unity Projects/Solar System Sim/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.Postprocessing.Editor">
+      <HintPath>C:/Users/jonah/Documents/Unity Projects/Solar System Sim/Library/ScriptAssemblies/Unity.Postprocessing.Editor.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.Rider.Editor">
       <HintPath>C:/Users/jonah/Documents/Unity Projects/Solar System Sim/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Postprocessing.Runtime">
+      <HintPath>C:/Users/jonah/Documents/Unity Projects/Solar System Sim/Library/ScriptAssemblies/Unity.Postprocessing.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
       <HintPath>C:/Users/jonah/Documents/Unity Projects/Solar System Sim/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
       <HintPath>C:/Users/jonah/Documents/Unity Projects/Solar System Sim/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Postprocessing.Editor">
-      <HintPath>C:/Users/jonah/Documents/Unity Projects/Solar System Sim/Library/ScriptAssemblies/Unity.Postprocessing.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Postprocessing.Runtime">
-      <HintPath>C:/Users/jonah/Documents/Unity Projects/Solar System Sim/Library/ScriptAssemblies/Unity.Postprocessing.Runtime.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup></ItemGroup>
