--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,16 +64,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\CelestialBody.cs" />
-    <Compile Include="Assets\Scripts\CharacterAnimator.cs" />
-    <Compile Include="Assets\Scripts\DoorAnimator.cs" />
-    <Compile Include="Assets\Scripts\FirstPersonController.cs" />
-    <Compile Include="Assets\Scripts\GravityHandler.cs" />
-    <Compile Include="Assets\Scripts\MovementPrediction.cs" />
-    <Compile Include="Assets\Scripts\PlanetGradientDataPasser.cs" />
-    <Compile Include="Assets\Scripts\PlayerGravity.cs" />
-    <Compile Include="Assets\Scripts\StarShaderDataPasser.cs" />
-    <Compile Include="Assets\Scripts\Universe.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\Animation\CharacterAnimator.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\Animation\DoorAnimator.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\Controls\FirstPersonController.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\Controls\PlayerGravity.cs" />
+    <Compile Include="Assets\Scripts\Looks\MovementPrediction.cs" />
+    <Compile Include="Assets\Scripts\Looks\PlanetGradientDataPasser.cs" />
+    <Compile Include="Assets\Scripts\Looks\PlanetTrail.cs" />
+    <Compile Include="Assets\Scripts\Looks\StarShaderDataPasser.cs" />
+    <Compile Include="Assets\Scripts\Physics\CelestialBody.cs" />
+    <Compile Include="Assets\Scripts\Physics\GravityHandler.cs" />
+    <Compile Include="Assets\Scripts\Physics\Universe.cs" />
     <None Include="Assets\Scripts\Shaders\PlanetGradientShader.shader" />
     <None Include="Assets\Scripts\Shaders\Star.shader" />
     <Reference Include="UnityEngine">
