Got the interaction code working

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Assets\Scripts\Gameplay\Animation\DoorAnimator.cs" />
     <Compile Include="Assets\Scripts\Gameplay\Controls\FirstPersonController.cs" />
     <Compile Include="Assets\Scripts\Gameplay\HUD\PlanetMouseoverHUD.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\HUD\PlayerHUDCoordinator.cs" />
     <Compile Include="Assets\Scripts\Gameplay\Interactions\InteractionHandler.cs" />
     <Compile Include="Assets\Scripts\Gameplay\Interactions\ShipDoorController.cs" />
     <Compile Include="Assets\Scripts\Looks\MovementPrediction.cs" />
